--- a/new_network_analysis_notebook_II.ipynb
+++ b/new_network_analysis_notebook_II.ipynb
@@ -49,9 +49,14 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {},
+      "outputs": [],
       "source": [
         "#import libraries needed for the notebook \n",
+        "\n",
+        "!pip install contextily\n",
+        "\n",
         "import matplotlib.pyplot as plt \n",
         "import matplotlib.patches as mpatches \n",
         "import networkx as nx \n",
@@ -66,23 +71,52 @@
         "from ipywidgets import interact, FloatRangeSlider, Layout\n",
         "from shapely.geometry import box\n",
         "import plotly.graph_objects as go"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "metadata": {},
-      "source": [
-        "#Let's us open the datasets in Google Collab easily\n",
-        "import os\n",
-        "os.system(\"wget https://github.com/ubcecon/ai-workshop/blob/ccss-networks.zip\")\n",
-        "os.system(\"ccss-networks\")\n",
-        "\n",
-        "csv_path = (\"https://github.com/ubcecon/ai-workshop/blob/ccss-networks/data\")"
-      ],
       "execution_count": null,
-      "outputs": []
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "#Method for opening dataset in Google Collab\n",
+        "\n",
+        "import os\n",
+        "import requests\n",
+        "from zipfile import ZipFile\n",
+        "from io import BytesIO\n",
+        "\n",
+        "# Correct URL for downloading the zip file\n",
+        "url = \"https://github.com/ubcecon/ai-workshop/archive/refs/heads/ccss-networks.zip\"\n",
+        "\n",
+        "# Download the zip file\n",
+        "response = requests.get(url)\n",
+        "if response.status_code == 200:\n",
+        "    # Extract the contents of the zip file\n",
+        "    with ZipFile(BytesIO(response.content)) as zip_file:\n",
+        "        zip_file.extractall()\n",
+        "    print(\"Files extracted successfully.\")\n",
+        "else:\n",
+        "    print(f\"Failed to download the file. Status code: {response.status_code}\")\n",
+        "\n",
+        "# List the contents of the current directory\n",
+        "print(\"Contents of the current directory:\")\n",
+        "print(os.listdir())\n",
+        "\n",
+        "# Update the paths to the correct location\n",
+        "network_path = \"ai-workshop-ccss-networks/data/vistorian_network.xls\"\n",
+        "locations_path = \"ai-workshop-ccss-networks/data/vistorian_locations.xls\"\n",
+        "\n",
+        "# Check if the files exist\n",
+        "if os.path.exists(network_path) and os.path.exists(locations_path):\n",
+        "    print(\"Both files found successfully.\")\n",
+        "else:\n",
+        "    print(\"Files not found. Checking the directory structure:\")\n",
+        "    for root, dirs, files in os.walk(\".\"):\n",
+        "        for file in files:\n",
+        "            if file.endswith(\".xls\"):\n",
+        "                print(os.path.join(root, file))"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -95,14 +129,16 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {},
+      "outputs": [],
       "source": [
         "# Load data and create our graph\n",
-        "df_edges = pd.read_excel(\"vistorian_network.xls\")\n",
+        "df_edges = pd.read_excel(\"ai-workshop-ccss-networks/data/vistorian_network.xls\")\n",
         "G = nx.from_pandas_edgelist(df_edges, source=\"SOURCE_LOCATION\", target=\"TARGET_LOCATION\")\n",
         "\n",
         "# Load and process location data\n",
-        "df_pos = pd.read_excel(\"vistorian_locations.xls\", index_col=0)\n",
+        "df_pos = pd.read_excel(\"ai-workshop-ccss-networks/data/vistorian_locations.xls\", index_col=0)\n",
         "gdf_pos = gpd.GeoDataFrame(df_pos, geometry=gpd.points_from_xy(df_pos['LONGITUDE'], df_pos['LATITUDE']), crs='EPSG:4326')\n",
         "gdf_pos = gdf_pos.to_crs('EPSG:3857')\n",
         "\n",
@@ -129,9 +165,7 @@
         "\n",
         "#Show the plot\n",
         "plt.show()"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -146,7 +180,9 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {},
+      "outputs": [],
       "source": [
         "# Define a function to count edges for each node, two parameters: G (Graphical object) and K(edges)\n",
         "def count_nodes_with_k_edges(G, k):\n",
@@ -176,9 +212,7 @@
         "print(\"\\nDegree of each node in the filtered subgraph:\")\n",
         "for node in G_sub.nodes():\n",
         "    print(f\"Node {node}: {G_sub.degree(node)} edges\")"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -200,7 +234,9 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {},
+      "outputs": [],
       "source": [
         "import networkx as nx\n",
         "import matplotlib.pyplot as plt\n",
@@ -265,9 +301,7 @@
         "\n",
         "if __name__ == \"__main__\":\n",
         "    main()"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -282,7 +316,9 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {},
+      "outputs": [],
       "source": [
         "# Find shortest path from Veloukovo to Delos\n",
         "Start = \"Veloukovo\"\n",
@@ -302,9 +338,7 @@
         "print(f\"Shortest path from {Start} to {End}:\")\n",
         "print(\" -> \".join(shortest_path))\n",
         "print(f\"Path length: {path_length}\")"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -315,7 +349,9 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {},
+      "outputs": [],
       "source": [
         "#Create a full map\n",
         "G_full = nx.from_pandas_edgelist(df_edges, source=\"SOURCE_LOCATION\", target=\"TARGET_LOCATION\")\n",
@@ -354,9 +390,7 @@
         "#Show our graph\n",
         "plt.tight_layout()\n",
         "plt.show()"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -371,7 +405,9 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {},
+      "outputs": [],
       "source": [
         "#Import specific libraries to create a gif\n",
         "import matplotlib.animation as animation\n",
@@ -438,9 +474,7 @@
         "    display(HTML(f'<img src=\"data:image/gif;base64,{encoded_gif}\" width=\"600\">'))\n",
         "\n",
         "plt.close(fig)"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -459,7 +493,9 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {},
+      "outputs": [],
       "source": [
         "import plotly.graph_objects as go\n",
         "import networkx as nx\n",
@@ -483,9 +519,7 @@
         "                layout=go.Layout(showlegend=False, hovermode='closest',\n",
         "                                 margin=dict(b=20,l=5,r=5,t=40)))\n",
         "fig.show()"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -500,7 +534,9 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {},
+      "outputs": [],
       "source": [
         "from shapely.geometry import box\n",
         "import geopandas as gpd\n",
@@ -569,9 +605,7 @@
         "# Print some information for verification\n",
         "print(f\"Number of filtered nodes: {len(gdf_pos_filtered)}\")\n",
         "print(f\"Number of edges in subgraph: {len(G_sub.edges())}\")"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -584,7 +618,9 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {},
+      "outputs": [],
       "source": [
         "from shapely.geometry import box\n",
         "import geopandas as gpd\n",
@@ -651,9 +687,7 @@
         "# Print some information for verification\n",
         "print(f\"Number of filtered nodes: {len(gdf_pos_filtered)}\")\n",
         "print(f\"Number of edges in subgraph: {len(G_sub.edges())}\")"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -684,11 +718,6 @@
     }
   ],
   "metadata": {
-    "kernelspec": {
-      "display_name": "Python 3 (ipykernel)",
-      "language": "Python",
-      "name": "python3"
-    },
     "jupytext": {
       "text_representation": {
         "extension": ".qmd",
@@ -696,6 +725,11 @@
         "format_version": "1.0",
         "jupytext_version": "1.16.1"
       }
+    },
+    "kernelspec": {
+      "display_name": "Python 3 (ipykernel)",
+      "language": "Python",
+      "name": "python3"
     }
   },
   "nbformat": 4,
